--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "15.3.1",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
+    "react-d3-tree": "^3.6.6",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
