--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 
 # dependencies
 /node_modules
+/backend/node_modules
+/.yarn/cache
+/.yarn/unplugged
+/.yarn/build-state.yml
+/.yarn/install-state.gz 
 /.pnp
 .pnp.*
 .yarn/*
