--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@sendgrid/mail": "^8.1.5",
     "@supabase/supabase-js": "^2.49.4",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-d3-tree": "^3.6.6",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
