--- a/package.json
+++ b/package.json
@@ -12,12 +12,20 @@
     "@heroicons/react": "^2.2.0",
     "@sendgrid/mail": "^8.1.5",
     "@supabase/supabase-js": "^2.49.4",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@xenova/transformers": "^2.17.2",
+    "mammoth": "^1.9.0",
+    "ml-kmeans": "^6.0.0",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-d3-tree": "^3.6.6",
     "react-dom": "^19.0.0",
-    "socket.io-client": "^4.8.1"
+    "recharts": "^2.15.3",
+    "socket.io-client": "^4.8.1",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
