--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "@tensorflow/tfjs": "^4.22.0",
     "@xenova/transformers": "^2.17.2",
+    "ethers": "^6.14.1",
     "mammoth": "^1.9.0",
     "ml-kmeans": "^6.0.0",
     "next": "15.3.1",
